--- a/Food Website/style.css
+++ b/Food Website/style.css
@@ -85,6 +85,48 @@ header .icon a:hover {
 header .icon #menu-bars {
 display: none;}
 
+#search-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1004;
+    background: rgba(0,0,0,.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+}
+
+#search-form #search-box {
+    width: 50rem;
+    border-bottom: .1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
+    font-size: 3rem;
+    text-transform: none;
+    background: none;
+}
+
+#search-form #search-box::placeholder {
+    color: #eee;
+}
+
+#search-form #search-box::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+}
+
+#search-form label {
+    color: #fff;
+    cursor: pointer;
+    font-size: 3rem;
+}
+
+#search-form label:hover {
+    color: var(--green);
+}
+
 /* media queries */
 @media (max-width: 991px) {
     html{
@@ -123,5 +165,11 @@ display: none;}
         margin: 1rem;
         font-size: 2rem;
         background: #eee;
+    }
+}
+
+@media (max-width: 991px) {
+    html{
+        font-size: 50%;
     }
 }
